<menu xmlns:android="http://schemas.android.com/apk/res/android" >


    <!--     注意：string的第一个字母为小写，string.xml文件中也是！！！ -->
    <item android:title="@string/menu_font_size">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/font_10"
                    android:title="@string/font_10" />
                <item
                    android:id="@+id/font_16"
                    android:title="@string/font_16"/>
                <item
                    android:id="@+id/font_20"
                    android:title="@string/font_20"/>

            </group>
        </menu>
    </item>

    <item
        android:title="@string/plain_menu"
        android:id="@+id/menu_plain_menu"
        />
    <item android:title="@string/menu_font_color">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/font_red"
                    android:alphabeticShortcut="r"
                    android:title="@string/red"/>
                <item
                    android:id="@+id/font_black"
                    android:alphabeticShortcut="r"
                    android:title="@string/black"/>

            </group>
        </menu>
    </item>

</menu>